<resources>
    <string name="app_name">my_first_aid_kit</string>
    <string name="Kits">Наборы</string>
    <string name="journal">Журнал</string>
    <string name="setting">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="my_kits">Мои Наборы</string>
    <string name="create_kit">Создание Аптечки</string>
    <string name="update_kit">Изменение Аптечки</string>
    <string name="name">Название</string>
    <string name="add">Добавить</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Принять</string>
    <string name="move">Переместить</string>
    <string name="dark_mode">Темная тема</string>
    <string name="background_work">Частота выполнения фоновой работы</string>
    <string name="work_2_by_day">Два раза в день</string>
    <string name="work_1_by_day">Раз в день</string>
    <string name="work_1_by_2_day">Раз в два дня</string>
    <string name="work_by_week">Раз в неделю</string>
    <string name="notification">Уведомления</string>
    <string name="add_medicamention">Добавление лекарства</string>
    <string name="valid">Годен до:</string>
    <string name="count">Количество</string>
    <string name="info_medicament">Информация о лекарстве</string>
    <string name="back">Назад</string>
    <string name="add_reminder">Добавить напоминание</string>
    <string name="count_day">Количество дней</string>
    <string name="start_accept">Начало приёма</string>
    <string name="stop_accept">Конец приёма</string>
    <string name="time_accept">Время приемы:</string>

    <string-array name="release_form">
        <item>Капсулы</item>
        <item>Таблетки</item>
        <item>Сироп</item>
        <item>Инъекция</item>
        <!-- <item>Мазь</item>
        <item>Крем</item> -->
        <item>Спрей</item>
    </string-array>

    <string-array name="periodicity">
        <item>Один раз в день</item>
        <item>Дважды в день</item>
        <item>Три раза в день</item>
    </string-array>


</resources>