<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor1"
    tools:context=".screen.setting.FragmentSetting">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/setting"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/mainColor"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/buttonNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/mainColor"
                android:text="@string/notification"
                android:textAlignment="viewStart"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                app:dividerColor="@color/light_green" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/background_work"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/background_work_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp">

                <RadioButton
                    android:id="@+id/rb_but_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/work_2_by_day"
                    android:textSize="16sp"
                    app:buttonTint="@color/blue2" />

                <RadioButton
                    android:id="@+id/rb_but_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/work_1_by_day"
                    android:textSize="16sp"
                    app:buttonTint="@color/blue2" />

                <RadioButton
                    android:id="@+id/rb_but_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/work_1_by_2_day"
                    android:textSize="16sp"
                    app:buttonTint="@color/blue2" />

                <RadioButton
                    android:id="@+id/rb_but_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/work_by_week"
                    android:textSize="16sp"
                    app:buttonTint="@color/blue2" />

            </RadioGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                app:dividerColor="@color/light_green" />

            <Switch
                android:id="@+id/switchDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:minHeight="48dp"
                android:text="@string/dark_mode"
                android:textSize="16sp"
                android:textStyle="bold"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>