<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAcceptMed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/accept"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:icon="@drawable/pill_48px"
        app:iconSize="22dp"
        app:iconTint="@color/blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

    <Button
        android:id="@+id/btnEditMed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainColor"
        android:text="@string/update"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:icon="@drawable/edit_48px"
        app:iconSize="22dp"
        app:iconTint="@color/blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcceptMed" />

    <Button
        android:id="@+id/btnMoveMed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainColor"
        android:text="@string/move"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:icon="@drawable/move_item_48px"
        app:iconSize="22dp"
        app:iconTint="@color/blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditMed" />

    <Button
        android:id="@+id/btnDeleteMed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainColor"
        android:text="@string/delete"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:icon="@drawable/delete_48px"
        app:iconSize="22dp"
        app:iconTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMoveMed" />
</androidx.constraintlayout.widget.ConstraintLayout>