<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet"
    android:paddingBottom="20dp">

    <Button
        android:id="@+id/btnEditReminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/update"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:icon="@drawable/edit_48px"
        app:iconSize="22dp"
        app:iconTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcceptReminder" />

    <Button
        android:id="@+id/btnDeleteReminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/delete"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:icon="@drawable/delete_48px"
        app:iconSize="22dp"
        app:iconTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditReminder" />

    <TextView
        android:id="@+id/tvInfoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAcceptReminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/accept"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:icon="@drawable/capsule_48px"
        app:iconSize="22dp"
        app:iconTint="@color/blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoBottom" />
</androidx.constraintlayout.widget.ConstraintLayout>